css/base.css
/* ... */
@font-face {
  font-family: 'IBM Plex Mono';
  font-style: normal;
  font-weight: 700;
  src: local('IBM Plex Mono Bold'), local('IBMPlexMono-Bold'), url(https://fonts.gstatic.com/s/ibmplexmono/v3/-F6qfjptAgt5VM-kVkqdyU8n3pQPwlBFgsAXHNk.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
  font-display: optional;
}

@font-face {
  font-family: 'League Mono';
  src: url(/fonts/LeagueMonoVariable.ttf)
}

.og {
  font-family: og-emoji, sans-serif;
}

html, body {
  margin: 0;
}

body {
  font-family: Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  -webkit-font-smoothing: antialiased;
  background: white;
  font-family: 'League Mono', monospace;
}

p {
  font-size: 18px;
  line-height: 1.5;
}

.top-line {
  border-top: 8px solid #7BE4D5;
  position:fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 100;
}

.container {
  padding-top: 50px;
}

::selection {
  background: #E0F7FA;
}

iframe {
  max-width: 100%;
}

/**********************
 * Copy
 **********************/
h1, h2, h3, h4 {
  font-weight: 700;
  color: black;
  margin: 20px 0;
  font-family: 'League Mono', monospace;
}

h1 a, h2 a, h3 a, h4 a, .sidebar a, .sidebar .sections button {
  text-decoration: none;
  color: #333;
}

h1 {
  font-size: 36px;
  font-weight: 900;
  margin-top: 0;
  margin-bottom: 40px;
}

h2, h3 {
  font-size: 20px;
  color: black;
  font-weight: 900;
  position: relative;
}

/* Thank you GitHub Universe site for this innovation */
h1, .rainbow {
  font-family: 'League Mono';
  font-variation-settings: "wght" 800;
  /* display: inline-block;
  background-image: linear-gradient(90deg, #000 0%, #0e1111 15%, #232b2b 30%, #232b2b 44%, 	#3b444b 58%, #0e1111 72%, #232b2b 86%, #6DBA82 100%);
  background-size: cover;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text; */
  color: black;
  text-fill-color: transparent;

}

ul.listing > h3 {
  color: black;
  font-weight: 900;
  border-left: 8px solid #000;
  padding-left: 10px;
}
/*
h4 {
  font-weight: 400;
}*/

h2 {
  font-size: 26px;
  margin-top: 40px;
  margin-bottom: 30px;
}

h2:after {
  content: "";
  position: absolute;
  width: 40px;
  height: 6px;
  bottom: -10px;
  left: 0;
  border-bottom: 6px solid #ff487a;
}

ul {
  margin: 0;
  padding: 0;
}



/**********************
 * Footer
 **********************/
.footer {
  padding: 50px 0;
  color: #ff487a;
  text-align: center;
  text-transform: uppercase;
  font-size: 13px;
  line-height: 20px;
}

.footer > .thanks {
  letter-spacing: 2px;
  float: left;
}

.footer > span {
  vertical-align: middle;
}

.footer > .thanks .heart {
  text-decoration: none;
  font-size: 20px;
}

.footer > .twitter {
  float: right;
}

/**********************
 * Sidebar
 **********************/
.sidebar {
  position: fixed;
  margin-left: 50px;
  width: 150px;
}

.sidebar .avatar {
  border-radius: 50%;
  margin-top: calc(50vh - 100px);
}

.sidebar .avatar:hover {
  -webkit-animation: avatarzomg 0.9s infinite;
  -moz-animation: avatarzomg 0.9s infinite;
  animation: avatarzomg 0.9s infinite;
}

.sidebar a {
  font-family: 'League Mono', monospace;
  font-variation-settings: "wght" 800;
  font-size: 30px !important;
  color: black;
  border-bottom: none;
}

.sidebar .meta {
  margin-left: 24px;
  margin-top: 10px;
  height: 20px;
  min-width:130px;
}

.sidebar .meta .icon {
  margin-left: 2px;
  margin-right: 2px;
  font-size: 20px;
}

.sidebar .sections {
  margin: 10px 0 0 54px;
}

.sidebar .sections li {
  list-style: none;
  margin-bottom: 10px;
}

.sidebar .sections a {
  font-size: 14px;
  font-weight: bold;
}

.sidebar .sections button {
  background: none;
  border: none;
  box-shadow: none;
  outline:none;
  cursor: pointer;
  padding-left: 10px;
  font-size:20px;
  text-align: center;
}
/**********************
 * Posts
 **********************/
.content {
  max-width: 700px;
  margin: 0 20px 50px 250px;
  position: relative;
}

.content .byline {
  margin-top: 5px;
  margin-bottom: 5px;
  font-weight: 900;
  font-size: 10px;
  color: #777;
  text-transform: uppercase;
}

.content p {
  margin-top: 0;
  margin-bottom: 1.2em;
  line-height: 1.5;
}

.content ul {
  margin-left: 20px;
  padding: 10px 0;
}

.content ul, .content ol {
  font-size: 18px;
}

.content li {
  margin-bottom: 10px;
  margin-left: 10px;
}

.content img:not(.emoji) {
  padding: 3px;
  max-width: 100%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  border-radius: 5px;
}

.content hr {
  background-color: #7BE4D5;
  border: 0px;
  margin: 50px auto;
  width: 50%;
  height: 5px;
  border-radius: 5px;
  max-width: 430px;
  color: #7ccdea;
  clear: both;
}

p.chunk {
  display: block;
  border-left: 8px solid #f4f3f3;
  padding: 10px 20px;
}

blockquote {
  background: #E0F7FA;
  margin: 30px 40px;
  padding: 14px 10px;
}

blockquote:before {
  color: #ff487a;
  content: "\201C";
  font-family: Georgia;
  font-size: 80px;
  line-height: 0;
  vertical-align: -0.5em;
}

blockquote:after {
  content: "";
}
blockquote p {
  display: inline;
}

/*.content blockquote cite:before {
    content: '— ';
}

.content blockquote cite {
  display: block;
  margin-top: .5em;
  text-align: right;
  color: #111;
  font-style: normal;
}*/

/**********************
* Posts lists
*********************/
.content .listing {
  margin: 10px 0 0 0;
  padding: 0;
}

.content .listing li {
  font-size: 15px;
  list-style: none;
  padding: 5px 3px;
  margin: 0;
  color: #777777;
}

.content .listing a {
  color: black;
  padding-bottom: 2px;
  border-bottom: 2px dotted #ddd;
  text-decoration: none;
  font-weight: normal;
  font-variation-settings: "wght" 450;
  transition: font-variation-settings 1s ease;
}
/* ... */

